# awayfromwork

./: Cargo.toml  fri.yml
src/: main.rs
turnus/: satsebrakke.yml  turnus1.yml  turnus2.yml
