[package]
name = "away-from-work"
version = "0.1.0"
authors = ["Sigurd Holsen <sigurd.holsen@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
chrono  = { version = "^0.4.19", features = ["serde"] }
term = "*"
itertools = "*"
clap = "*"
